--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-    <title>demo web page</title>
+    <title>YouTube Channel Viewcount Plotter</title>
     <style>
         h1 {
             color:#009900;
